fixed layout issues

--- a/src/styles/MintButton.module.css
+++ b/src/styles/MintButton.module.css
@@ -78,7 +78,7 @@
 
 @media (max-width: 768px) {
   .mintWrapper {
-    margin-block: 2em;
+    margin-block-end: 2em;
   }
   .batchItem {
     flex-direction: column;
