--- a/src/styles/hero.module.css
+++ b/src/styles/hero.module.css
@@ -27,11 +27,16 @@
   justify-content: center;
   align-items: center;
   width: 50%;
-  padding: 2em;
+  padding: 0;
 }
 
 .introSake {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  gap: 1em;
   margin-bottom: 2em;
   max-width: 600px;
 }
@@ -66,7 +71,12 @@
   }
 
   .contentColumn {
-    padding: 0.5em;
+    padding: 0;
+  }
+
+  .introSake {
+    margin-block: 1em;
+    padding: 2em;
   }
 
   .imageColumn {
